# rcmd

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  git-issues-config.sh  pyproject.toml
.claude/: CLAUDE.md
.codex/: CODEX.md
.cursor/rules/: python.mdc  testing.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-feature.yml  02-user-story.yml  03-bug.yml  04-chore.yml  config.yml
.github/workflows/: ci.yml  publish.yml
agent_docs/: README.md  code-patterns.md  common-pitfalls.md  database-operations.md  testing-guide.md
docs/: ADR-sync-wrapper.md  UI Cookbook.md  command-bus-python-spec.md  e2e-bug-fix.md  e2e-test-plan.md  issuues-01.md  java-implementation-spec.md  perf-test.md  planning-best-practices.md  process-manager-design.md  python-library-best-practices.md  report-chaos-testing-plan.md  sync-code-deduplication-options.md  sync-refactoring-plan.md  syncronous-python-design.md
docs/architecture/adr/: 001-use-architectural-decision-records.md  002-use-pgmq-for-message-queue.md  003-separate-command-metadata-table.md  004-single-queue-per-domain.md  template.md
docs/features/: F001-command-sending.md  F002-command-processing.md  F003-retry-error-handling.md  F004-troubleshooting-queue.md  F005-observability.md  F006-e2e-testing-demo.md  F007-handler-dependency-injection.md  F008-e2e-fastapi-migration.md  F009-batch-commands.md  F010-database-schema-management.md  F011-probabilistic-test-behaviors.md  F012-pypi-publishing.md  F013-process-manager.md  F014-sync-wrapper.md  F015-sync-refactor.md  F016-business-rule-exception.md  README.md  development-plan.md
docs/features/stories/: F012-pypi-publishing.md  S001-send-command.md  S002-idempotent-send.md  S003-send-with-correlation.md  S004-receive-command.md  S005-complete-command.md  S006-register-handler.md  S007-worker-concurrency.md  S008-transient-retry.md  S009-permanent-failure.md  S010-retry-exhaustion.md  S011-list-troubleshooting.md  S012-operator-retry.md  S013-operator-cancel.md  S014-operator-complete.md  S015-audit-trail.md  S016-query-commands.md  S017-base-infrastructure.md  S018-send-command-view.md  S019-commands-browser-view.md  S020-troubleshooting-queue-view.md  S021-audit-trail-view.md  S022-dashboard-view.md  S023-e2e-tests-success.md  S024-e2e-tests-failure.md  S025-load-testing.md  S026-handler-decorator-class.md  S027-register-instance.md  S028-transaction-participation.md  S029-stateless-service-pattern.md  S030-composition-root.md  S031-tight-processing-loop.md  S041-create-batch.md  S043-batch-completion-callback.md  S045-batch-ui-view.md  S046-commandbus-schema-migration.md  S047-e2e-schema-migration.md  S048-docker-flyway-integration.md  S049-python-schema-qualified-names.md  S050-cleanup-legacy-migrations.md  (+39 more)
docs/issues/: chore-process-manager-docs-and-tests.md
docs/java-spec/: 01-domain-models.md  02-pgmq-client.md  03-repositories.md  04-handler-registry.md  05-worker.md  06-command-bus.md  07-troubleshooting.md  08-spring-integration.md  09-testing.md  10-process.md  11-admin-ui.md
migrations/: V001__commandbus_schema.sql  V002__e2e_schema.sql  V003__process_batch_tsq_stats.sql  V003__process_manager_schema.sql  V004__add_failed_count.sql  V004__batch_stats_on_demand.sql  V005__batch_type_and_process_batch_id.sql
scripts/: init-db.sql
src/commandbus/: __init__.py  batch.py  bus.py  exceptions.py  handler.py  models.py  worker.py
src/commandbus/_core/: __init__.py  batch_sql.py
src/commandbus/ops/: __init__.py  troubleshooting.py
src/commandbus/pgmq/: __init__.py  client.py
src/commandbus/process/: base.py  repository.py
src/commandbus/repositories/: audit.py  batch.py  command.py
src/commandbus/sync/: __init__.py  bus.py  config.py  process.py  runtime.py  tsq.py  worker.py
tests/: __init__.py  conftest.py
tests/e2e/: .env.example  README.md  __init__.py  flyway.conf  load_test.py  requirements.txt  run-demo.sh  run-worker.sh  run.py  tailwind.config.js
tests/e2e/app/: __init__.py  config.py  dependencies.py  handlers.py  main.py  models.py  runtime.py  sync_models.py  worker.py
tests/e2e/migrations/: V001__pgmq_extension.sql  V002__commandbus_schema.sql  (+2 more)
tests/integration/: __init__.py  conftest.py  test_audit.py  test_batch.py  test_business_rule_exception.py  test_correlation_id.py  test_exhaustion.py  test_permanent_failure.py  test_process_repository.py  test_query.py  test_retry.py  test_send_idempotency.py  test_sync_mode.py  test_troubleshooting_queue.py  test_worker.py
tests/unit/: test_batch.py  test_bus.py  test_composition.py  test_config_store.py  test_exceptions.py  test_handler.py  test_pgmq_client.py  test_policies.py  test_process_batch_schema.py  test_process_manager.py  test_process_repository.py  test_process_router.py  test_repositories.py  test_runtime_manager.py  test_service_pattern.py  test_setup.py  test_statement_report_process.py  test_troubleshooting.py  test_worker.py  test_worker_cli.py
(+63 files in other folders)
