[project]
name = "commandbus"
version = "0.1.0"
description = "Command Bus abstraction over PostgreSQL + PGMQ"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
maintainers = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "command-bus",
    "cqrs",
    "postgresql",
    "pgmq",
    "message-queue",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "psycopg[binary,pool]>=3.2.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.0.0",
]
e2e = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/your-org/commandbus"
Documentation = "https://github.com/your-org/commandbus#readme"
Repository = "https://github.com/your-org/commandbus"
Issues = "https://github.com/your-org/commandbus/issues"
Changelog = "https://github.com/your-org/commandbus/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commandbus"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Unused arguments in tests (fixtures)
    "PLR2004",  # Magic values in tests are OK
]
"tests/e2e/app/**/*.py" = [
    "TC001",    # FastAPI Depends() requires runtime imports
    "PLC0415",  # FastAPI app factory pattern requires imports inside function
]

[tool.ruff.lint.isort]
known-first-party = ["commandbus"]

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "psycopg.*",
    "psycopg_pool.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests requiring PostgreSQL (deselect with '-m not integration')",
    "e2e: end-to-end tests (deselect with '-m not e2e')",
    "slow: slow running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/commandbus"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
fail_under = 80
show_missing = true
